# makina

./: .gitignore  README.md  message  pyproject.toml  test.mk
makina/: __init__.py  __main__.py  constants.py  displays.py  instructions.py
