[tool.poetry]
name = "makina"
version = "0.1.0"
description = "A 2d cell-based esoteric language"
authors = ["Ginger"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.10"
numpy = "^1.22.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
makina = "makina:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
